# mcp-plesk-unified

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TLC-Refactor-C901.md  enrich_toc.py  fastmcp.json  main.py  manage-plesk-docs.py  platform_utils.py  pyproject.toml  server.py
.agents/: .skill-lock.json  .skill-lock.json.backup
.cline/skills/coding-guidelines/: .skill-meta.json
.cline/skills/docs-writer/: .skill-meta.json
.cline/skills/tlc-spec-driven/: .skill-meta.json
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/skills/best-practices/: .skill-meta.json
.github/skills/security-best-practices/: .skill-meta.json
.github/skills/technical-design-doc-creator/: .skill-meta.json
.github/workflows/: tests.yml
.specs/features/data-cleanup/: design.md  spec.md  tasks.md
.specs/features/fastmcp-upgrade-3-0-1/: design.md  spec.md  tasks.md
plesk_unified/: __init__.py  ai_client.py  chunking.py  html_utils.py  io_utils.py  server.py
scripts/: generate_virtual_toc.py  manage_plesk_docs.py
tests/: test_ai_client.py  test_chunking.py  test_html_utils.py  test_io_utils.py
tests/fixtures/: sample.html
