[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plesk-unified"
version = "0.1.0"
description = "A unified MCP server that indexes and retrieves Plesk documentation using vector embeddings and semantic search with reranking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Gilson Siqueira", email = "gilson@example.com"}
]
keywords = ["plesk", "mcp", "model-context-protocol", "semantic-search", "rag", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.14.5",
    "gitpython>=3.1.46",
    "lancedb>=0.29.1",
    "sentence-transformers>=5.2.2",
]

[project.urls]
Homepage = "https://github.com/barateza/mcp-plesk-unified"
Documentation = "https://github.com/barateza/mcp-plesk-unified#readme"
Repository = "https://github.com/barateza/mcp-plesk-unified.git"
"Bug Tracker" = "https://github.com/barateza/mcp-plesk-unified/issues"

[tool.setuptools]
py-modules = ["server"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]
test = [
    "pytest>=8.0.0",
]
